--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.12"
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "ethers": "^6.13.3",
+    "hardhat": "^2.22.12",
+    "hardhat-deploy-ethers": "^0.4.2"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.2.0",
     "dotenv": "^16.4.5",
-    "fp-ts": "^2.16.9"
+    "fp-ts": "^2.16.9",
+    "hardhat-deploy": "^0.12.4"
   }
 }
