--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "ethers": "^6.13.3",
     "hardhat": "^2.22.12",
-    "hardhat-deploy-ethers": "^0.4.2"
+    "hardhat-deploy-ethers": "^0.4.2",
+    "hardhat-gas-reporter": "^2.2.1"
   },
   "dependencies": {
     "@chainlink/contracts": "^1.2.0",
